--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/Aravind-medi-14/react-store-a",
   "name": "react-store-a",
   "version": "0.1.0",
   "private": true,
