--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Aravind-medi-14.github.io/react-store-a",
+  "homepage": "https://aravind-medi-14.github.io/react-store-a",
   "name": "react-store-a",
   "version": "0.1.0",
   "private": true,
